--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,32 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Package Files
 *.jar
 *.war
 *.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Logs
+*.log
+
+# Gradle Files
+.gradle
+.m2
+
+# Binaries
+/bin
+
+# Build output directies
+/target
+*/target
+/build
+*/build
+
+# Eclipse specific files/directories
+.classpath
+.project
+.settings
+.metadata
