--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ apply plugin: 'findbugs'
 apply plugin: 'java'
 apply plugin: 'pmd'
 
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
 mainClassName = "com.asimihsan.handytrowel.cli.Main"
 
 applicationDefaultJvmArgs = [
