--- a/build.gradle
+++ b/build.gradle
@@ -5,23 +5,24 @@
   * Copyright (c) 2014, Asim Ihsan, All rights reserved.
   * <http://www.asimihsan.com>
   * https://github.com/asimihsan/handytrowel/blob/master/LICENSE
-  *  
+  *
   * This program is free software: you can redistribute it and/or modify
   * it under the terms of the GNU Affero General Public License as published
   * by the Free Software Foundation, either version 3 of the License, or
   * (at your option) any later version.
-  *  
+  *
   * This program is distributed in the hope that it will be useful,
   * but WITHOUT ANY WARRANTY; without even the implied warranty of
   * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   * GNU Affero General Public License for more details.
-  *  
+  *
   * You should have received a copy of the GNU Affero General Public License
   * along with this program.  If not, see <http://www.gnu.org/licenses/>.
   * ========================================================================
   */
 
 apply plugin: 'application'
+apply plugin: 'checkstyle'
 apply plugin: 'eclipse'
 apply plugin: 'findbugs'
 apply plugin: 'java'
@@ -67,4 +68,8 @@ test {
         showStandardStreams = true
         exceptionFormat = 'full'
     }
+}
+
+checkstyle {
+    configFile = new File(rootDir, "checkstyle.xml")
 }
